@@ -3,39 +3,47 @@ package project;
 import project.operands.*;
 import project.tokens.*;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 
 public class Executor implements IExecutor {
-    private static final Map<Class<? extends IToken>, Class<? extends IOperand>> tokenMapping = Map.of(
-            AdditionToken.class, AdditionOperand.class,
-            SubtractionToken.class, SubtractionOperand.class,
-            MultToken.class, MultOperand.class,
-            DivisionToken.class, DivisionOperand.class,
-            SinToken.class, SinOperand.class,
-            CosToken.class, CosOperand.class
-    );
+    private static final Map<Class<? extends IToken>, Class<? extends IOperand>> tokenMapping = createTokenMapping();
+    private static final Map<Class<? extends IOperand>, Function<IOperand, IOperand>> unaryCreationMapping = createUnaryCreationMapping();
+    private static final Map<Class<? extends IOperand>, BiFunction<IOperand, IOperand, IOperand>> binaryCreationMapping = createBinaryCreationMapping();
 
-    private static final Map<Class<? extends IOperand>, Function<IOperand, IOperand>> unaryCreationMapping = Map.of(
-            SinOperand.class, SinOperand::new,
-            CosOperand.class, CosOperand::new
-    );
+    private static Map<Class<? extends IToken>, Class<? extends IOperand>> createTokenMapping() {
+        Map<Class<? extends IToken>, Class<? extends IOperand>> map = new HashMap<>();
+        map.put(AdditionToken.class, AdditionOperand.class);
+        map.put(SubtractionToken.class, SubtractionOperand.class);
+        map.put(MultToken.class, MultOperand.class);
+        map.put(DivisionToken.class, DivisionOperand.class);
+        map.put(SinToken.class, SinOperand.class);
+        map.put(CosToken.class, CosOperand.class);
+        return Collections.unmodifiableMap(map);
+    }
 
-    private static final Map<Class<? extends IOperand>, BiFunction<IOperand, IOperand, IOperand>> binaryCreationMapping = Map.of(
-            AdditionOperand.class, AdditionOperand::new,
-            SubtractionOperand.class, SubtractionOperand::new,
-            MultOperand.class, MultOperand::new,
-            DivisionOperand.class, DivisionOperand::new
-    );
+    private static Map<Class<? extends IOperand>, Function<IOperand, IOperand>> createUnaryCreationMapping() {
+        Map<Class<? extends IOperand>, Function<IOperand, IOperand>> map = new HashMap<>();
+        map.put(SinOperand.class, SinOperand::new);
+        map.put(CosOperand.class, CosOperand::new);
+        return Collections.unmodifiableMap(map);
+    }
+
+    private static Map<Class<? extends IOperand>, BiFunction<IOperand, IOperand, IOperand>> createBinaryCreationMapping() {
+        Map<Class<? extends IOperand>, BiFunction<IOperand, IOperand, IOperand>> map = new HashMap<>();
+        map.put(AdditionOperand.class, AdditionOperand::new);
+        map.put(SubtractionOperand.class, SubtractionOperand::new);
+        map.put(MultOperand.class, MultOperand::new);
+        map.put(DivisionOperand.class, DivisionOperand::new);
+        return Collections.unmodifiableMap(map);
+    }
+
 
 
     @Override
     public NumberOperand Execute(List<IToken> input) throws Exception {
-        var resultStep = HandleUnary(input);
+        List<IToken> resultStep = HandleUnary(input);
         resultStep = HandleBraces(resultStep);
         resultStep = HandleBinaryOperators(resultStep, MultToken.class, DivisionToken.class);
         resultStep = HandleBinaryOperators(resultStep, AdditionToken.class, SubtractionToken.class);
@@ -46,13 +54,13 @@ public class Executor implements IExecutor {
     }
 
     private List<IToken> HandleUnary(List<IToken> input) throws Exception {
-        var result = new ArrayList<IToken>();
+        List<IToken> result = new ArrayList<IToken>();
         for (int i = 0; i < input.size(); i++) {
             if (input.get(i) instanceof SinToken || input.get(i) instanceof CosToken) {
                 if (input.get(i+1) instanceof OpenBracesToken) {
-                    var closeBraceIndex = FindCloseBrace(input, i+1);
-                    var innerResult = Execute(input.subList(i + 1, closeBraceIndex+1));
-                    var operand = unaryCreationMapping.get(tokenMapping.get(input.get(i).getClass())).apply(innerResult);
+                    int closeBraceIndex = FindCloseBrace(input, i+1);
+                    NumberOperand innerResult = Execute(input.subList(i + 1, closeBraceIndex+1));
+                    IOperand operand = unaryCreationMapping.get(tokenMapping.get(input.get(i).getClass())).apply(innerResult);
                     result.add(operand.Value());
                     i = closeBraceIndex;
                 } else {
@@ -68,11 +76,11 @@ public class Executor implements IExecutor {
     }
 
     private List<IToken> HandleBraces(List<IToken> input) throws Exception {
-        var result = new ArrayList<IToken>();
+        ArrayList<IToken> result = new ArrayList<IToken>();
         for (int i = 0; i < input.size(); i++) {
             if (input.get(i) instanceof OpenBracesToken) {
-                var closeBraceIndex = FindCloseBrace(input, i);
-                var innerResult = Execute(input.subList(i + 1, closeBraceIndex));
+                int closeBraceIndex = FindCloseBrace(input, i);
+                NumberOperand innerResult = Execute(input.subList(i + 1, closeBraceIndex));
                 result.add(innerResult);
                 i = closeBraceIndex;
             }
@@ -85,7 +93,7 @@ public class Executor implements IExecutor {
     }
 
     private int FindCloseBrace(List<IToken> input, int openBraceIndex) {
-        var openBracesCount = 0;
+        int openBracesCount = 0;
         for (int i = openBraceIndex + 1; i < input.size(); i++) {
             if (input.get(i) instanceof OpenBracesToken) {
                 openBracesCount++;
@@ -107,16 +115,16 @@ public class Executor implements IExecutor {
         
         while (didChange) {
             didChange = false;
-            var tempResult = new ArrayList<IToken>();
+            ArrayList<IToken> tempResult = new ArrayList<IToken>();
             IToken possibleConnectedOperand = null;
 
             for (int i = 0; i < result.size(); i++) {
-                var currentToken = result.get(i);
+                IToken currentToken = result.get(i);
                 boolean isTargetOperator = Arrays.stream(operatorTypes)
                     .anyMatch(type -> type.isInstance(currentToken));
 
                 if (isTargetOperator) {
-                    var operand = binaryCreationMapping.get(tokenMapping.get(currentToken.getClass()))
+                    IOperand operand = binaryCreationMapping.get(tokenMapping.get(currentToken.getClass()))
                         .apply((NumberOperand)possibleConnectedOperand, (NumberOperand)result.get(i+1));
                     tempResult.add(operand.Value());
                     if (result.size() > i+2) {
